--- a/index.html
+++ b/index.html
@@ -3,19 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Momentum</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Momentum App</title>
+    <link rel="stylesheet" href="CSS/style.css" />
   </head>
   <body>
-    <h1 class="hello">Grab me!1</h1>
-    <h1 class="hello">Grab me!2</h1>
-    <h1 class="hello">Grab me!3</h1>
-    <h1 class="hello">Grab me!4</h1>
-    <h1 class="hello">Grab me!5</h1>
-    <div class="hi">
-      <h1>Hi, Grab me!</h1>
+    <form id="login-form" class="hidden">
+      <input
+        required
+        maxlength="15"
+        type="text"
+        placeholder="What is your name?"
+      />
+      <input type="submit" value="Log In" />
+    </form>
+    <h2 id="clock">00:00:00</h2>
+    <h1 id="greeting" class="hidden"></h1>
+    <form id="todo-form">
+      <input type="text" placeholder="Write a To Do and Press Enter." />
+    </form>
+    <ul id="todo-list"></ul>
+    <div id="quote">
+      <span></span>
+      <span></span>
     </div>
-
-    <script src="app2.js"></script>
+    <div id="weather">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <br />
+    <a target="_blank" href="https://google.com">Ask Google God!</a>
+    <script src="js/greetings.js"></script>
+    <script src="js/clock.js"></script>
+    <script src="js/quotes.js"></script>
+    <script src="js/background.js"></script>
+    <script src="js/todo.js"></script>
+    <script src="js/weather.js"></script>
   </body>
 </html>
